--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -47,3 +47,65 @@
   padding-bottom: 0.25rem;
   border-bottom: 4px solid #222;
 }
+
+.toggle-icon {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header {
+    position: relative;
+    transition: 0.5s height ease-in-out;
+  }
+
+  .header.expanded {
+    height: 100vh;
+  }
+  .header.expanded ul {
+    position: absolute;
+    top: 120px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    opacity: 1;
+  }
+
+  .header.expanded li {
+    margin: 15px 0;
+    font-size: 24px;
+  }
+
+  .header.expanded .logo {
+    position: absolute;
+    top: 23px;
+    left: 20px;
+  }
+
+  .header ul {
+    position: absolute;
+    top: -300px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+  }
+  .toggle-icon {
+    display: block;
+    color: white;
+    position: absolute;
+    top: 28px;
+    right: 20px;
+  }
+
+  .expanded {
+    height: 100vh;
+  }
+}
