--- a/src/components/header/HeaderCartButton.module.css
+++ b/src/components/header/HeaderCartButton.module.css
@@ -6,7 +6,6 @@
   color: white;
   /* padding: 0.75rem 3rem; */
   display: flex;
-  justify-content: space-around;
   align-items: center;
   border-radius: 25px;
   font-weight: bold;
@@ -17,15 +16,11 @@
   background-color: #444;
 }
 
-.icon {
-  margin-right: 0.5rem;
-}
-
 .badge {
   background-color: #444;
-  padding: 0.25rem 1rem;
+  /* padding: 0.25rem 1rem; */
   border-radius: 25px;
-  margin-left: 1rem;
+  margin-left: 0.3rem;
   font-weight: bold;
 }
 
